@@ -27,7 +27,10 @@
 # software developed by the University of California, Berkeley, and its
 # contributors.
 #
-#ident	"@(#)DESC	1.5	05/06/08 SMI"	/* SVr4.0 1.1	*/
+# from OpenSolaris "DESC	1.5	05/06/08 SMI"	/* SVr4.0 1.1	*/
+#
+# Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
+#
 # Description file for Postscript printers. The resolution and unitwidth have
 # been selected to match, in a sense, PostScript's default coordinate system
 # and the widths given in Adobe's Font manual.
@@ -38,6 +41,7 @@
 fonts 10 R I B BI CW H HB HX S1 S
 sizes 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 38 40 44 48 54 60 72 0
+anysize
 res 720
 hor 1
 vert 1
